--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <footer class="geek__footer">
       <figure class="geek__logo--figure">
-        <img src="./assets/image 2.png" alt="logo" />
+        <img src="./assets/image 1.svg" alt="logo" />
         <figcaption>AluraGeek</figcaption>
         <div>
           <p>DESARROLLADO POR:</p>
